--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "layouts": "^3.0.2",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
+    "rupiah-format": "^1.0.0",
     "sequelize": "^6.35.1",
     "validator": "^13.11.0"
   }
